Now text-align is set to the correct value(logo header)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,6 +16,7 @@
             font-weight: 500;
             margin: 0;
             margin-left: 6px;
+            text-align: left;
         }
     }
 
